--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "categories": [
     "Other"
   ],
+  "publisher": "ran",
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
